// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ItemDetailsEdit rendering tests ItemDetailsEdit - renders full composition - test 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-slate-50"
    data-testid="item-details-edit"
  >
    <div
      class="border-b border-slate-200 bg-white px-6 py-4"
      data-testid="item-details-edit-header"
    >
      <div
        data-testid="test-header"
      />
    </div>
    <div
      class="flex-1 overflow-y-auto"
      data-testid="item-details-edit-content"
    >
      <div
        class="px-6 pt-3 pb-3.5"
        data-testid="item-details-edit-breadcrumbs"
      >
        <div
          data-testid="test-breadcrumbs"
        />
      </div>
      <div
        class="mx-auto max-w-5xl"
        data-testid="item-details-edit-body"
      >
        <div
          data-testid="test-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemDetailsEdit rendering tests ItemDetailsEdit - renders with testid and children - test 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-slate-50"
    data-testid="item-details-edit"
  >
    <div
      data-testid="test-child"
    />
  </div>
</div>
`;

exports[`ItemDetailsEdit rendering tests ItemDetailsEditBody - renders with testid and children - test 1`] = `
<div>
  <div
    class="mx-auto max-w-5xl"
    data-testid="item-details-edit-body"
  >
    <div
      data-testid="test-child"
    />
  </div>
</div>
`;

exports[`ItemDetailsEdit rendering tests ItemDetailsEditBreadcrumbs - renders with testid and children - test 1`] = `
<div>
  <div
    class="px-6 pt-3 pb-3.5"
    data-testid="item-details-edit-breadcrumbs"
  >
    <div
      data-testid="test-child"
    />
  </div>
</div>
`;

exports[`ItemDetailsEdit rendering tests ItemDetailsEditContent - renders with testid and children - test 1`] = `
<div>
  <div
    class="flex-1 overflow-y-auto"
    data-testid="item-details-edit-content"
  >
    <div
      data-testid="test-child"
    />
  </div>
</div>
`;

exports[`ItemDetailsEdit rendering tests ItemDetailsEditHeader - renders with testid and children - test 1`] = `
<div>
  <div
    class="border-b border-slate-200 bg-white px-6 py-4"
    data-testid="item-details-edit-header"
  >
    <div
      data-testid="test-child"
    />
  </div>
</div>
`;
